# nutty_vp

./: .gitignore  CMakeLists.txt
include/: bus_interconnect.h  constants.h  decoded_instruction.h  dot_product.h  rv32i.h  rv32i_iss.h  simple_memory_interface.h  soc_memory.h  top.h
src/: bus_interconnect.cpp  dot_product.cpp  main.cpp  rv32i.cpp  simple_memory_interface.cpp  soc_memory.cpp  top.cpp
test/: add-01.elf.objdump
test/fw_with_dotp/: main.c  startup.S
test/fw_without_dotp/: Makefile  link.ld  multiply_manual.txt  startup.S
